--- a/modulo-02/html-css/exercicios/ex021/style.css
+++ b/modulo-02/html-css/exercicios/ex021/style.css
@@ -2,21 +2,17 @@ h1{
     background-color: lightcoral;
     height: 300px;
     width: 300px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: darkgray;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+
+    border: 5px solid darkolivegreen;
+
+    padding: 10px;
+
+    margin: 15px auto 50px auto;
+
+    outline: 10px groove rgb(13, 136, 173);
 }
 
-a{
-    border-width: 5px;
-    border-style: solid;
-    border-color: lightpink;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+#a{
+    border: 5px ridge rgba(0, 255, 0, 0.432);
+
 }
