--- a/modulo-02/html-css/exercicios/ex021/style2.css
+++ b/modulo-02/html-css/exercicios/ex021/style2.css
@@ -13,6 +13,7 @@ header{
 nav{
     background-color: lightgray;
     padding: 3px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.342);
 }
 
 nav > a{
@@ -41,6 +42,10 @@ footer{
     color: white;
     text-align: center;
     padding: 2px;
+    margin: 0px;
+}
+
+footer > p{
     margin: 0px;
 }
 
