--- a/modulo-02/html-css/exercicios/ex021/style2.css
+++ b/modulo-02/html-css/exercicios/ex021/style2.css
@@ -34,7 +34,8 @@ main{
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 10px;
-    margin-left: 0px;
+    margin-left: 10px;
+    border-radius: 20px 0px;
 }
 
 footer{
