--- a/modulo-02/html-css/desafios/d010/estilo/style.css
+++ b/modulo-02/html-css/desafios/d010/estilo/style.css
@@ -1,5 +1,69 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face{
+    font-family: 'Android';
+    src: url('/modulo-02/html-css/desafios/d010/fonte/idroid.otf') format('opentype');
+    font-weight: normal;
+}
+
+:root{
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', cursive;
+    --fonte-androide: 'Android', cursive;
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
-    background-color: #c5ebd6;
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+header{
+    background-color: var(--cor4);
+}
+
+header > h1{
+    color: white;
+    font-family: var(--fonte-destaque)
+}
+
+header > p{
+    color: white;
+}
+
+nav{
+    background-color: var(--cor5);
+}
+
+main{
+    background-color: white;
+}
+
+main > article > h1{
+    color: var(--cor5);
+    font-family: var(--fonte-androide);
+}
+
+main > article > h2{
+    color: var(--cor5);
+    font-family: var(--fonte-androide);
+}
+
+footer{
+    background-color: var(--cor5);
+    color: white;
+
 }
