--- a/modulo-02/html-css/desafios/d010/estilo/style.css
+++ b/modulo-02/html-css/desafios/d010/estilo/style.css
@@ -49,7 +49,14 @@ nav{
 }
 
 main{
+    min-width: 300px;
+    max-width: 1000px;
+    padding: 20px;
+    margin: auto;
+    margin-bottom: 30px;
     background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.486);
+    border-radius: 0px 0px 10px 10px;
 }
 
 main > article > h1{
@@ -60,6 +67,16 @@ main > article > h1{
 main > article > h2{
     color: var(--cor5);
     font-family: var(--fonte-androide);
+}
+
+main  img{
+    width: 100%;
+}
+
+.pequena{
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 footer{
