--- a/modulo-02/html-css/desafios/d010/estilo/style.css
+++ b/modulo-02/html-css/desafios/d010/estilo/style.css
@@ -92,14 +92,44 @@ main{
     border-radius: 0px 0px 10px 10px;
 }
 
-main > article > h1{
+main p{
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+}
+
+main strong{
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a{
+    color: var(--cor4);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor3);
+}
+
+main  h1{
     color: var(--cor5);
     font-family: var(--fonte-androide);
 }
 
-main > article > h2{
-    color: var(--cor5);
+main  h2{
+    color: var(--cor4);
     font-family: var(--fonte-androide);
+    font-weight: bold;
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    padding: 2px;
+    text-indent: 5px;
+
 }
 
 main  img{
@@ -107,7 +137,7 @@ main  img{
 }
 
 .pequena{
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
