--- a/modulo-02/html-css/desafios/d010/estilo/style.css
+++ b/modulo-02/html-css/desafios/d010/estilo/style.css
@@ -49,7 +49,7 @@ header > h1{
     margin-bottom: 20px;
     font-size: 3em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
-    
+    font-weight: normal;
 }
 
 header > p{
@@ -71,12 +71,13 @@ nav{
 }
 
 nav > a{
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
     transition-duration: 0.5s;
+    margin-bottom: 30px;
 }
 
 nav > a:hover{
@@ -122,6 +123,7 @@ main a:hover{
 main  h1{
     color: var(--cor5);
     font-family: var(--fonte-androide);
+    font-weight: normal;
 }
 
 main  h2{
@@ -145,6 +147,22 @@ main  img{
     margin: auto;
 }
 
+.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 30px;
+    position: relative;
+    padding-bottom: 54%;
+}
+
+.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 aside{
     background-color: var(--cor1);
     padding: 10px;
@@ -158,6 +176,7 @@ aside > h3{
     padding: 10px;
     border-radius: 10px 10px 0px 0px;
     margin: -10px -10px 0px -10px;
+    font-family: var(--fonte-padrao);
 }
 
 aside ul{
