--- a/modulo-03/html-css/desafios/d012/estilos/cordel.css
+++ b/modulo-03/html-css/desafios/d012/estilos/cordel.css
@@ -1,13 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
+:root{
+    --font01: Verdana, Geneva, Tahoma, sans-serif;
+    --font02: 'Passion One', cursive;
+    --font03: 'Sriracha', cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font01);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font02);
+    font-size: 10vw;
 }
 header p{
     padding-bottom: 50px;
@@ -35,10 +48,12 @@ header a:hover, footer a:hover{
 }
 
 section{
+    font-family: var(--font03);
     line-height: 2em;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    font-size: 3.5vw;
 }
 
 .normal{
@@ -51,7 +66,8 @@ section{
 }
 
 .imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: gray;
 }
 
