--- a/modulo-03/html-css/desafios/d012/estilos/cordel.css
+++ b/modulo-03/html-css/desafios/d012/estilos/cordel.css
@@ -56,6 +56,10 @@ section{
     font-size: 3.5vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 .normal{
     background-color: white;
 }
@@ -63,13 +67,27 @@ section{
 .imagem{
     background-color: rgb(73, 72, 72);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.486);
+    text-shadow: 2px 1px 0px black;
 }
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+}
+
 
 footer{
     background-color: black;
